# Zero-os

./: .gitignore  Cargo.toml  Makefile  README.md  README_zh.md  roadmap-enterprise.md  roadmap.md
bootloader/: Cargo.toml
bootloader/src/: main.rs
docs/: roadmap.md
kernel/: Cargo.toml  README_MODULES.md  kernel.ld
kernel/arch/: Cargo.toml  context_switch.rs  cpu_protection.rs  gdt.rs  interrupts.rs  ipi.rs  lib.rs  syscall.rs
kernel/audit/: Cargo.toml  lib.rs
kernel/block/: Cargo.toml
kernel/block/src/: lib.rs  pci.rs
kernel/block/src/virtio/: blk.rs  mod.rs  transport.rs
kernel/cap/: Cargo.toml  lib.rs  types.rs
kernel/cpu_local/: Cargo.toml  lib.rs
kernel/drivers/: Cargo.toml  framebuffer.rs  keyboard.rs  lib.rs  vga_buffer.rs
kernel/ipc/: Cargo.toml  futex.rs  ipc.rs  lib.rs  pipe.rs  sync.rs
kernel/kernel_core/: Cargo.toml  elf_loader.rs  fork.rs  lib.rs  process.rs  scheduler_hook.rs  signal.rs  syscall.rs  time.rs  usercopy.rs
kernel/lsm/: Cargo.toml  lib.rs  policy.rs
kernel/mm/: Cargo.toml  buddy_allocator.rs  dma.rs  lib.rs  memory.rs  oom_killer.rs  page_cache.rs  page_table.rs  tlb_shootdown.rs
kernel/net/: Cargo.toml
kernel/net/src/: arp.rs  buffer.rs  conntrack.rs  device.rs  ethernet.rs  firewall.rs  fragment.rs  icmp.rs  ipv4.rs  lib.rs  pci.rs  socket.rs  stack.rs  tcp.rs  udp.rs  virtio_net.rs
kernel/sched/: Cargo.toml  enhanced_scheduler.rs  lib.rs  lock_ordering.rs  process.rs  scheduler.rs
kernel/seccomp/: Cargo.toml  lib.rs  types.rs
kernel/security/: Cargo.toml  kaslr.rs  kptr.rs  lib.rs  memory_hardening.rs  rng.rs  spectre.rs  tests.rs  wxorx.rs
kernel/src/: clone_test.elf  demo.rs  hello.elf  integration_test.rs  interrupt_demo.rs  main.rs  process_demo.rs  runtime_tests.rs  shell.elf  stack_guard.rs  syscall_demo.rs  syscall_test.elf  usermode_test.rs
kernel/trace/: kdump.rs
kernel/vfs/: Cargo.toml  cgroupfs.rs  devfs.rs  ext2.rs  initramfs.rs  lib.rs  manager.rs  procfs.rs  ramfs.rs  traits.rs  types.rs
kernel/virtio/: Cargo.toml
kernel/virtio/src/: lib.rs  queue.rs  transport.rs
userspace/: Cargo.toml  clone_test.c  hello_musl.c  hello_musl.elf  userspace.ld
userspace-target/: .rustc_info.json
userspace-target/release/.fingerprint/compiler_builtins-9aa5e610d65241dd/: build-script-build-script-build  build-script-build-script-build.json
userspace-target/x86_64-unknown-none/release/: shell  shell.d
userspace-target/x86_64-unknown-none/release/.fingerprint/alloc-addde3f7e6007462/: lib-alloc  lib-alloc.json
userspace-target/x86_64-unknown-none/release/.fingerprint/compiler_builtins-182618422b4963a4/: run-build-script-build-script-build  run-build-script-build-script-build.json
userspace-target/x86_64-unknown-none/release/.fingerprint/compiler_builtins-843bd42cf6242042/: dep-lib-compiler_builtins  lib-compiler_builtins  lib-compiler_builtins.json
userspace-target/x86_64-unknown-none/release/.fingerprint/core-1712f346f30bf536/: dep-lib-core  lib-core  lib-core.json
userspace-target/x86_64-unknown-none/release/.fingerprint/userspace-1923080b8022e4fc/: dep-lib-userspace  lib-userspace  lib-userspace.json
userspace/.cargo/: config.toml
userspace/src/: lib.rs  libc.rs  main.rs  shell.rs  syscall.rs  syscall_test.rs
(+4 files in other folders)
