[package]
name = "arch"
version = "0.1.0"
edition = "2021"

[lib]
path = "lib.rs"

[dependencies]
kernel_core = { path = "../kernel_core" }
drivers = { path = "../drivers" }
sched = { path = "../sched" }
x86_64 = "0.15"
spin = "0.9"
lazy_static = { version = "1.4", features = ["spin_no_std"] }