[package]
name = "lsm"
version = "0.1.0"
edition = "2021"
description = "Linux Security Module (LSM) hook infrastructure for Zero-OS"

[lib]
path = "lib.rs"

[dependencies]
spin = "0.9"

# Cross-crate dependencies
# Note: kernel_core and vfs removed to avoid cyclic dependencies
# ProcessId, Credentials, and OpenFlags are defined locally
# Callbacks are used to get current process context
cap = { path = "../cap" }
audit = { path = "../audit" }
drivers = { path = "../drivers" }

[features]
default = []
# Enable LSM policy enforcement (otherwise all hooks are no-ops)
lsm = []
